Update layout with message resource properties

--- a/src/main/resources/labels.properties
+++ b/src/main/resources/labels.properties
@@ -1,3 +1,32 @@
 
+dashboard = Tue An Ltd.
+
+header.inbox          = Inbox
+header.login          = Login
+header.logout         = Log out
+header.profile        = Profile
+header.profile.detail = Detail
+
+login.email           = Email address
+login.forgot.password = Forgot password?
+login.password        = Password
+login.remember        = Keep me logged in
+login.subject         = Login
+login.submit          = Log in
+login.title           = Login
+login.welcome         = Welcome, please login.
+
+menu.about     = About
+menu.admin     = Admin
+menu.category  = Category
+menu.contact   = Contact
+menu.dashboard = Dashboard
+menu.product   = Product
+
+sys.company      = Tue An
+sys.company.name = Tue An Ltd.
+sys.copyright    = Tue An Ltd. All rights reserved.
+sys.version      = v0.1
+
 welcome.greeting = Nice that you could join the meeting. We begin at {0}.
 welcome.message  = Hello, {0}
