Update uploads file and store into database

--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -1,8 +1,10 @@
 # DataSource (For MySQL)
+# jdbc:mysql://localhost:3306/cokf3ea1_smt?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+# useSSL=true|false
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/cokf3ea1_smt
+jdbc.url = jdbc:mysql://localhost:3306/cokf3ea1_smt?autoReconnect=true&useSSL=false
 jdbc.username = root
-jdbc.password = root
+jdbc.password = 123456
 ### hibernate option ###
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
